fixed stretch/ alignment in banner, started info

--- a/style.css
+++ b/style.css
@@ -1,137 +1,281 @@
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	font-family: 'Cantarell', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+  line-height: 1;
+}
+
+body {
+  font-family: 'Niramit', sans-serif;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
+  color: unset;
 }
 
-h2 {
-	font-size: px;
+.mobile {
+  display: none;
 }
+
+/* header and nav */
 
 header {
-	background-color: white;
-	height: 64px;
-	display: flex;
-	justify-content: space-between;
-	padding: 24px;
-	align-items: center;
-	display: fixed;
-	z-index: 10;
-	width: 100%;
-	border-bottom: 5px solid black;
+  position: fixed;
+  top: 0;
+  z-index: 3;
+  width: 100%;
+  background-color: white;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.5rem;
+  /* border-bottom: black 1px solid; */
 }
 
 .logo {
-	height: 32px;
-	display: inline-flex;
-	align-items: center;
+  display: flex;
 }
 
-.logo img {
-	height: 50px;
+.name {
+  display: inline-flex;
+  align-items: center;
+  font-weight: 300;
+  color: gray;
+  text-transform: uppercase;
+  font-size: 1.4rem;
 }
 
-.logo h1 {
-	font-size: 1.5rem;
-	text-transform: uppercase;
-	color: gray;
-	font-weight: unset;
-}
-
-.logo .bold {
-	font-size: 1.5rem;
-
-	font-weight: 700;
-	color: black;
+.bold {
+  font-weight: 900;
+  color: black;
 }
 
 nav {
-	margin-right: 24px;
+  display: flex;
+  justify-content: center;
+  white-space: nowrap;
 }
 
 nav ul {
-	display: inline-flex;
-	list-style: none;
+  justify-content: space-between;
+  display: flex;
 }
 
-nav ul li {
-	margin-left: 16px;
+nav li {
+  list-style: none;
+  padding-left: 1rem;
 }
 
-nav a {
-	color: black;
-	font-weight: bold;
-	text-rendering: optimizeLegibility;
+/* mobile header and nav */
+
+@media only screen and (max-width: 828px) {
+  .desktop,
+  .logo {
+    display: none;
+  }
+
+  header.mobile {
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
-@media only screen and (max-width: 946px) {
-	.bold,
-	.logo > h1,
-	nav > ul > li > a {
-		font-size: 0.99em;
-		white-space: nowrap;
-		font-weight:unset;
-	}
-	nav a {
-		text-rendering: optimizeLegibility;
-	}
+/* main */
 
-	.logo {
-		max-width: 100%;
-	}
-
-	.logo h1 {
-		text-rendering: optimizeLegibility;
-	}
-	nav ul li {
-		margin-left: 3px;
-	}
-
-	header {
-		padding: 0;
-	}
+main {
+  position: relative;
+  top: 4rem;
 }
 
-.main-container {
-	display: flex;
-	align-items: center;
-	background-color: lightgray;
+.landing {
+  background-color: #d8d8d8;
 }
 
-main img {
-	max-width: 100%;
+.container {
+  display: flex;
+  align-items: center;
 }
 
-.main-banner {
-	flex-basis: 60%;
-	padding: 32px 24px;
+.banner {
+  min-width: 536px;
+  padding: 2rem 1.5rem;
+  width: 60%;
 }
 
-.main-text {
-	padding-left: 24px;
-	width: 30%;
+.banner-text {
+  width: 35%;
+  padding: 2rem 1.5rem;
+  color: #4a4a4a;
 }
 
-h2 {
-	font-size: 3.5rem;
-	line-height: 0.8;
-	font-weight:700;
-	margin-bottom: 10%;
+.banner-text h1 {
+  font-size: 3.3rem;
+  line-height: .9;
+  font-weight: bolder;
+  padding-bottom: 1.5rem;
+  white-space: pre-line;l;;
 }
 
-h3 {
-	font-size: 1.6rem;
-	line-height: 0.9;
-	margin-bottom: 10%;
+.banner-text h3 {
+  font-weight: 600;
+  font-size: 1.5rem;
+  line-height: 1.3;
+  padding-bottom: 1.5rem;
 }
 
-button {
-	width: 80%;
-	padding: 8px 0;
-	font-size: 18px;
+.cta-button {
+  padding: 0.5px;
+  width: 95%;
+  font-size: 1.3rem;
+  color: white;
+  cursor: pointer;
+  border: none;
+  font-family: 'Niramit', sans-serif;
+  background-color: #4a4a4a;
+}
+
+/* mobile main */
+
+@media only screen and (max-width: 828px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .banner {
+    width: 100%;
+    padding: 0;
+    min-width: unset;
+  }
+
+  .banner-text {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 2rem 1rem;
+  }
+
+  .banner-text h1 {
+    padding-bottom: 2rem;
+    font-size: 2.5rem;
+  }
+
+  .banner-text h3 {
+    font-size: 1.4rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .cta-button {
+    justify-self: center;
+    width: 100%;
+    font-size: 1.1rem;
+  }
+}
+
+/* information */
+
+.information {
+  display: flex;
+  border-bottom: #E0E2E2 solid 2px;
+}
+
+.mobile {
+  display: none;
+}
+
+.info-content {
+  flex-direction: column;
+  width: 60%;
+  display: flex;
+  padding: 2rem 1.5rem;
+}
+
+.quote {
+  width: 100%;
+}
+
+figcaption {
+  position: relative;
+  top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.schedule {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content:first-baseline;
+}
+
+.event {
+  border: 3px #E0E2E2 solid;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.gray.event {
+  background-color: #D8D8D8;
+}
+
+.link {
+  color: #5F9DE4;
+}
+
+.thumbnail {
+  width: 35%;
+  height: auto;
+  padding: 1rem;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+}
+
+
+
+.information h2 {
+  font-size: 2rem;
+  line-height: 1;
+  font-weight: bolder;
+  padding-bottom: 1.5rem;
+  padding-top: 2rem;
+  white-space:nowrap;
+}
+
+/* mobile infomation */
+@media only screen and (max-width: 828px) {
+  .dt {
+    display: none;
+  }
+
+  img.mobile {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .schedule {
+    width: 100%;
+  }
+
+  .event {
+    display: flex;
+    flex-direction: column;
+  }
 }
